BCT-2: Update; correction: clickpanle, github button and infopanel on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,8 @@ html, body {
 
 .GitHubButton {
   position: fixed;
-  bottom: 60px;
-  right: 10px;
+  bottom: 30px;
+  right: 30px;
   background-color: var(--color-background);
   color: var(--color-text);
   border: none;
@@ -77,7 +77,7 @@ html, body {
 @media (max-width: 768px) {
   .Container {
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
   }
 
   .App {
@@ -85,11 +85,12 @@ html, body {
     padding: 10px;
     min-height: 100vh;
   }
+
 }
 
 
 .Info-Panel {position: fixed;
-  bottom: 60px;
+  bottom: 100px;
   left: 50%;
   transform: translate(-50%, 0);
   padding: 8px 16px;
@@ -121,7 +122,6 @@ html, body {
       max-width: 100%;
       font-size: 1rem;
       padding: 10px 20px;
-      bottom: 130px;
       transform: translateX(-50%);
   }
 }
